// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GeolinkMap /> renders matches snapshot when hidden and visible 1`] = `
<section
  className="geolink-map hidden"
>
  <div
    className="map-wrapper"
  >
    <iframe
      id="coverage-map"
<<<<<<< HEAD
      name={1521815253279}
=======
      name={1522087337899}
>>>>>>> 55f3f59d9fbab72b0605be35aa71f51ed7ee59fe
      role="map"
      title="Interactive Coverage Map"
    />
  </div>
</section>
`;

exports[`<GeolinkMap /> renders matches snapshot when hidden and visible 2`] = `
<section
  className="geolink-map "
>
  <div
    className="map-wrapper"
  >
    <iframe
      id="coverage-map"
<<<<<<< HEAD
      name={1521815253279}
=======
      name={1522087337899}
>>>>>>> 55f3f59d9fbab72b0605be35aa71f51ed7ee59fe
      role="map"
      title="Interactive Coverage Map"
    />
  </div>
</section>
`;
